# Visera-II

./: .gitignore  CMakeLists.txt  Debug.ps1  Develop.ps1  GitHubSync.ps1  LICENSE  README.md  Release.ps1  TODO.md
API/: Visera.cs
Apps/AlohaVisera/: CMakeLists.txt  Main.ixx  Visera-App.csproj  Visera-App.json
Apps/AlohaVisera/Assets/Icon/: App.ico.rc
Apps/AlohaVisera/Assets/Icons/: App.icns
Apps/AlohaVisera/Assets/Script/: Foo.cs  GVSClient.cs  Program.cs
Apps/AlohaVisera/Assets/Sound/: ProjectInfo.json
Apps/AlohaVisera/Global/: Visera.hpp
Apps/AlohaVisera/Scripts/: install.cmake
Apps/AlohaVisera/Source/: Demos.ixx  Main.ixx
Engine/: CMakeLists.txt
Engine/API/: CMakeLists.txt
Engine/API/CSharp/: Visera.cs  Visera.csproj  Visera.runtimeconfig.json
Engine/API/CSharp/Log/: Visera-Log.cs
Engine/API/Global/: Visera.hpp
Engine/API/Scripts/: install.cmake
Engine/API/Source/: Visera.ixx
Engine/APIs/: Visera.cs
Engine/APIs/Log/: Visera-Log.cs
Engine/APIs/World/: Visera-World.cs
Engine/Assets/: README.md
Engine/Assets/Shader/: Background.slang  Cube.slang  JFA.slang  Line.slang  Skybox.slang  Sprite.slang  Tonemap.slang
Engine/Assets/Shaders/: Skybox.slang
Engine/Core/Global/: Visera-Core.hpp
Engine/Core/Scripts/: install.cmake  install_ankerl.cmake
Engine/Core/Source/Archive/: Visera-Core-Archive.ixx
Engine/Core/Source/Color/: Visera-Core-Color.ixx
Engine/Core/Source/Compression/: Visera-Core-Compression.ixx
Engine/Core/Source/Global/: Visera-Core-Global.ixx
Engine/Core/Source/Log/: Visera-Core-Log.ixx
Engine/Global/: Visera-DotNETConfig.json  Visera-Engine.hpp  Visera-Scripting.json
Engine/Modules/Assets/Global/: Visera-Assets.hpp
Engine/Modules/Assets/Scripts/: install.cmake  install_libpng.cmake
Engine/Modules/Assets/Source/: Visera-Assets.ixx
Engine/Modules/Audio/Global/: Visera-Audio.hpp
Engine/Modules/Audio/Scripts/: install.cmake
Engine/Modules/Audio/Source/: Visera-Audio.ixx
Engine/Modules/Core/Global/: Visera-Core.hpp
Engine/Modules/Core/Scripts/: install.cmake  install_spdlog.cmake
Engine/Modules/Core/Source/: Visera-Core.ixx
Engine/Modules/Graphics/: CMakeLists.txt
Engine/Modules/Graphics/Global/: Visera-Graphics.hpp
Engine/Modules/Graphics/Scripts/: install.cmake  install_imgui.cmake
Engine/Modules/Graphics/Source/: Visera-Graphics.ixx
Engine/Modules/Physics2D/Global/: Visera-Physics2D.hpp
Engine/Modules/Physics2D/Scripts/: install.cmake
Engine/Modules/Physics2D/Source/: Visera-Runtime-Physics.ixx
Engine/Modules/Platform/: CMakeLists.txt
Engine/Modules/Platform/Global/: Visera-Platform.hpp
Engine/Modules/Platform/Scripts/: install.cmake
Engine/Modules/Platform/Source/: Visera-Platform.ixx
Engine/Modules/RHI/: CMakeLists.txt
Engine/Modules/RHI/Global/: Visera-RHI.hpp
Engine/Modules/RHI/Scripts/: install.cmake  install_vma.cmake  install_vulkan.cmake
Engine/Modules/RHI/Source/: Visera-RHI.ixx
Engine/Modules/Runtime/Global/: Visera-Runtime.hpp
Engine/Modules/Runtime/Scripts/: install.cmake  install_bvh.cmake  install_dotnet.cmake  install_freetype.cmake  install_glfw.cmake  install_imgui.cmake  install_onetbb.cmake  install_stb.cmake
Engine/Modules/Runtime/Source/: Visera-Runtime.ixx
Engine/Modules/Scripting/: CMakeLists.txt
Engine/Modules/Scripting/Global/: Visera-Scripting.hpp
Engine/Modules/Scripting/Scripts/: install.cmake
Engine/Modules/Scripting/Source/: Visera-Scripting.ixx
Engine/Modules/Shader/: CMakeLists.txt
Engine/Modules/Shader/Global/: Visera-Shader.hpp
Engine/Modules/Shader/Scripts/: install.cmake
Engine/Modules/Shader/Source/: Visera-Shader.ixx
Engine/Runtime/Assets/: CMakeLists.txt
Engine/Runtime/Assets/Global/: Visera-Assets.hpp
Engine/Runtime/Assets/Scripts/: install.cmake  install_miniaudio.cmake  install_stb.cmake
Engine/Runtime/Assets/Source/: Visera-Assets.ixx
Engine/Runtime/Audio/: CMakeLists.txt
Engine/Runtime/Audio/Global/: Visera-Audio.hpp
Engine/Runtime/Audio/Scripts/: install.cmake
Engine/Runtime/Core/: CMakeLists.txt
Engine/Runtime/Global/: CMakeLists.txt  Visera-Runtime.hpp
Engine/Runtime/Global/Global/: Visera-Global.hpp
Engine/Runtime/Global/Scripts/: install.cmake  install_onetbb.cmake
Engine/Runtime/Global/Source/: Visera-Global.ixx
Engine/Runtime/Graphics/Scripts/: install.cmake  install_bvh.cmake  install_freetype.cmake
Engine/Runtime/Graphics/Source/: Visera-Graphics.ixx
Engine/Runtime/Physics2D/Global/: Visera-Physics2D.hpp
Engine/Runtime/Physics2D/Scripts/: install.cmake  install_box2d.cmake
Engine/Runtime/Physics2D/Source/: Visera-Runtime-Physics.ixx
Engine/Runtime/Platform/Global/: Visera-Platform.hpp
Engine/Runtime/Platform/Scripts/: install.cmake  install_glfw.cmake
Engine/Runtime/Platform/Source/: Visera-Platform.ixx
Engine/Runtime/RHI/Global/: Visera-RHI.hpp
Engine/Runtime/RHI/Scripts/: install.cmake
Engine/Runtime/RHI/Source/: Visera-RHI.ixx
Engine/Runtime/Scripting/Global/: Visera-Scripting.hpp
Engine/Runtime/Scripting/Scripts/: install_dotnet.cmake
Engine/Runtime/Scripting/Source/: Visera-Scripting.ixx
Engine/Runtime/Scripts/: install_glfw.cmake  install_miniaudio.cmake
Engine/Runtime/Shader/Global/: Visera-Shader.hpp
Engine/Runtime/Source/: Visera-Runtime.ixx
Engine/Scripts/: install.cmake  install_bvh.cmake  install_dotnet.cmake  install_entt.cmake  install_slang.cmake  install_wwise.cmake
Engine/Source/: Visera-Engine.ixx
Engine/Source/API/: Visera-Engine-API.ixx
Engine/Source/AssetHub/: Visera-Engine-AssetHub.ixx
Engine/Source/Audio/: Visera-Engine-Audio.ixx
Engine/Source/Compute/: Visera-Engine-Compute.ixx
Engine/Source/Event/: Visera-Engine-Event.ixx
Engine/Source/Object/: Visera-Engine-Object.ixx
Engine/Source/Platform/: Visera-Engine-Platform.ixx
Engine/Source/Render/: Visera-Engine-Render.ixx
Engine/Source/Scene/: Visera-Engine-Scene.ixx
Engine/Source/Scripting/: Visera-Engine-Scripting.ixx
Engine/Source/UI/: Visera-Engine-UI.ixx
Engine/Source/World/: Visera-Engine-World.ixx
UTests/: CMakeLists.txt  Main.ixx
(+777 files in other folders)
